# tatouage

./: .gitignore  CMakeLists.txt  CommentUtiliserCMake.txt  README.md
src/: CMakeLists.txt  conversionJPEG.c  fonctions.c  fonctions.h  insertion.c  passehaut.c  testDCTSurCanalV.c
src/Interface/: Makefile  Tatouage  callback.c  callback.h  configuration.c  configuration.h  fenetrePrincipale.c  fenetrePrincipale.h  interface.glade  lancement  main.c  makefile  test
src/Projet/: Lancement  Tatouage  Tatouage.c  callback.c  callback.h  configuration.c  configuration.h  dct.c  dct.h  fenetrePrincipale.c  fonctions.c  insertion.c  interface.glade  logoMark.c  logoMark.h  makefile  masque.h
src/Projet/Resultat/: Marque.txt  MarqueDetectee.txt  key.txt  position_bloc.txt
src/Projet/include/: detection.h  fonctions.h  global.h  insertion.h  logoMark.h  masque.h  matrix.h
src/Projet/src/: Tatouage.c  dct.c  detection.c  fonctions.c  insertion.c  logoMark.c  tatouage.c
src/Tatouage/: Tatouage  Tatouage.c  detection.c  detection.h  fonctions.h  insertion.c  makefile
src/TestUnitaires/: detection.c  fonctions.c  fonctions.h  global.h  insertion.c  insertion.h  makefile  test.c
src/TestUnitaires/Resultat/: Marque.txt  MarqueDetectee.txt  key.txt  position_bloc.txt
src/insertion/: insertion.c
src/insertion/inculde/: masque.h
src/insertion/src/: dct.c  fonctions.c  matrix.c
src/passebas/: passebas.c
src/passehaut/: passehaut.c
src/projet/: insertion.c
src/projet/include/: dct.h  fonctions.h  global.h
src/projet/src/: fonctions.c
